# ledger-integration-test

./: Cargo.toml  deploy.sh  dfx.json
src/inter_rs/: Cargo.toml  build.rs  lib.rs
src/inter_rs/declarations/: counter_mo.rs  counter_rs.rs  ledger.rs  mod.rs
