[package]
name = "inter_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = "1.0.188"
serde_bytes = "0.11.12"

[build-dependencies]
ic-cdk-bindgen = { workspace = true }
